syntax = "proto3";

message HubState {
    uint32 last_eth_block = 1;
}
